Fix blog post title overflowing ouside parent.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,7 @@
   --tw-text-opacity: 1;
   color: rgba(44, 44, 44, var(--tw-text-opacity)) !important;
   text-decoration: none;
+  word-wrap: break-word; 
 }
 
 .post_title_link:hover {
